fix(home/favicon): add gap for card container, remove unnecessary favicon.svg

--- a/src/assets/styles/components/layout/cards/BentoCard.module.css
+++ b/src/assets/styles/components/layout/cards/BentoCard.module.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 1rem;
     padding: 1rem;
     grid-row: span 1;
     animation: var(--animation-slide-in-down) 1s;
